add hand class styling

--- a/JavaScript30-master/02 - JS and CSS Clock/main.css
+++ b/JavaScript30-master/02 - JS and CSS Clock/main.css
@@ -36,3 +36,11 @@ body {
   height: 100%;
   transform: translateY(-3px); /* account for the height of the clock hands */
 }
+
+.hand {
+  width: 50%;
+  height: 6px;
+  background: black;
+  position: absolute;
+  top: 50%;
+}
