--- a/JavaScript30-master/03 - CSS Variables/main.css
+++ b/JavaScript30-master/03 - CSS Variables/main.css
@@ -1,3 +1,12 @@
+:root {
+  --base: #ffc600;  /* these are css variables */
+  --spacing: 10px;
+  --blur: 10px;
+}
+
+
+/* Miscellaneous styles, nothing to do with CSS variables */
+
 body {
   text-align: center;
   background: #193549;
