--- a/JavaScript30-master/03 - CSS Variables/main.css
+++ b/JavaScript30-master/03 - CSS Variables/main.css
@@ -4,6 +4,15 @@
   --blur: 10px;
 }
 
+img {
+  padding: var(--spacing);
+  background: var(--base);
+  filter: blur(var(--blur));
+}
+
+.hl {
+  color: var(--base);
+}
 
 /* Miscellaneous styles, nothing to do with CSS variables */
 
